# mcp-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  mcp-fence.yml  mcp-guard.yml
docs/: local_llm.md  methodology.md  roadmap.md  rule_catalog.md  sandboxing.md  threat_model.md
examples/: __init__.py  _mcp_lite.py
examples/safe_server/: README.md  mcp.json  server.py
examples/safe_server/data/: hello.txt  notes.md
examples/vulnerable_filesystem_server/: README.md  fake_secret.txt  mcp.json  server.py
examples/vulnerable_http_server/: README.md  mcp.json  server.py
examples/vulnerable_metadata_server/: README.md  mcp.json  server.py
examples/vulnerable_shell_server/: README.md  mcp.json  server.py
src/mcp_fence/: __init__.py  cli.py  constants.py  models.py
src/mcp_fence/fuzz/: __init__.py  detectors.py  generator.py  runner.py
src/mcp_fence/llm/: __init__.py  local_judge.py
src/mcp_fence/mcp/: __init__.py  client.py  protocol.py  stdio_client.py
src/mcp_fence/report/: html.py  sarif.py  text.py
src/mcp_fence/report/templates/: report.html
src/mcp_fence/sandbox/: __init__.py  profiles.py
src/mcp_fence/scanner/: __init__.py  code_scan.py  config_scan.py  metadata_scan.py  risk_rules.py  secrets.py
src/mcp_fence/utils/: jsonschema.py  logging.py  paths.py  subprocesses.py
src/mcp_guard/: __init__.py  cli.py  models.py
src/mcp_guard/fuzz/: generator.py  payloads.py  runner.py
src/mcp_guard/llm/: local_judge.py
src/mcp_guard/mcp/: client.py  inventory.py  protocol.py  stdio_client.py
src/mcp_guard/report/: __init__.py  html.py  sarif.py  text.py
src/mcp_guard/report/templates/: report.html
src/mcp_guard/sandbox/: docker.py
src/mcp_guard/scanner/: code_scan.py  metadata_scan.py
src/mcp_guard/utils/: jsonschema.py  logging.py  paths.py
tests/: conftest.py  test_cli_smoke.py  test_config_scan.py  test_detectors.py  test_examples.py  test_fuzz_generator.py  test_html_report.py  test_metadata_scan.py  test_sarif.py
