[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-guard"
version = "0.1.0"
description = "Local-first security scanner, MCP protocol inspector, dynamic fuzzer, sandbox runner, and report generator for Model Context Protocol servers."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Daoyuan Li", email = "lidaoyuan2816@gmail.com"},
]
keywords = ["mcp", "security", "scanner", "fuzzer", "sandbox", "llm", "tool-poisoning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.5",
    "jinja2>=3.1",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-timeout>=2.2",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/DaoyuanLi2816/mcp-guard"
Issues = "https://github.com/DaoyuanLi2816/mcp-guard/issues"
Repository = "https://github.com/DaoyuanLi2816/mcp-guard"

[project.scripts]
mcp-guard = "mcp_guard.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_guard*"]

[tool.setuptools.package-data]
mcp_guard = ["report/templates/*.html", "report/templates/*.css"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["examples/vulnerable_*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501", "B008", "UP007", "SIM108", "B904", "RUF012", "UP035", "UP006",
    # Style choices we keep intentionally.
    "SIM102", "SIM103",
    "UP042",  # str + Enum is fine on 3.11+; we don't require 3.11's StrEnum.
    "RUF002", # Cyrillic chars in docstrings (we DOCUMENT them on purpose).
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "B011"]
"examples/*" = ["E501", "F401", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-ra --strict-markers"
